--- a/course-data/curriculum/projects-data.json
+++ b/course-data/curriculum/projects-data.json
@@ -19,8 +19,8 @@
     },
     "2048" : {
         "title" : "Project 3: 2048",
-        "spec" : null,
-        "submit" : null,
+        "spec" : "https://docs.google.com/document/d/199V-21R31Jk0D2zigXwEEM7GIuB8Ewhff4alUh4_Cg4/edit#",
+        "submit" : "https://www.gradescope.com/courses/224752/assignments/927234",
         "resources" : []
     },
     "explore" : {
