--- a/course-data/curriculum/content-structure.yaml
+++ b/course-data/curriculum/content-structure.yaml
@@ -158,9 +158,11 @@
 
 10:
   lectures: []
-  live-sessions: []
+  live-sessions:
+    - break
   labs: []
-  discussion: []
+  discussion: 
+    - break
   projects: []
   readings: []
   dans-oh:
