--- a/course-data/curriculum/content-structure.yaml
+++ b/course-data/curriculum/content-structure.yaml
@@ -199,7 +199,7 @@
     - python3
   projects:
     - pytris
-    - final
+    - proposal
   readings:
     - "data-science"
   dans-oh:
@@ -215,6 +215,7 @@
   discussion:
     - python4
   projects:
+    - proposal
     - final
   readings:
     - "women-in-coding"
