--- a/static/course-data/curriculum/projects-data.json
+++ b/static/course-data/curriculum/projects-data.json
@@ -48,8 +48,8 @@
     },
     "final" : {
         "title" : "Project 6: Final Project",
-        "spec" : null,
-        "submit" : null,
+        "spec" : "https://docs.google.com/document/d/1eKplx0iWszQ-YBmOA8Qx2Cba5w0ClhHdzYDfBjKWSB4/edit",
+        "submit" : "https://www.gradescope.com/courses/224752/assignments/1166837",
         "resources" : []
     }
 }
