--- a/course-data/curriculum/content-structure.yaml
+++ b/course-data/curriculum/content-structure.yaml
@@ -231,7 +231,7 @@
     - ai
   labs: []
   discussion:
-    - finalReview1
+    - socialimpl
   projects:
     - final
   readings: []
@@ -245,7 +245,7 @@
   live-sessions: []
   labs: []
   discussion:
-    - finalReview2
+    - finalReview
   projects:
     - final
   readings: []
