--- a/src/ui-config/ui-colors.config.yaml
+++ b/src/ui-config/ui-colors.config.yaml
@@ -3,6 +3,8 @@ weekly-schedule:
   live-sessions: "#EE7C2F"
   discussion: "#8f56e3"
   labs: "#F3B200"
-  projects: "#62c213"
-  readings: "#cf4ad9"
-  dans-oh: "#00a178"
+  projects: "#62C213"
+  readings: "#Cf4AD9"
+  dans-oh: "#00A178"
+  surveys: "#BBBBBB"
+  exams: "#BB0000"
