--- a/src/ui-config/quick-links.config.yaml
+++ b/src/ui-config/quick-links.config.yaml
@@ -17,3 +17,7 @@
 - label: Piazza
   link: "https://piazza.com/class/kjt2jqnct3u2m"
   icon: supervisor_account
+
+- label: ❗ Fa21 AI Application
+  link: "https://docs.google.com/forms/d/e/1FAIpQLSdmFmt7UwH3U2XYuR-Gs3r0D60ejKL18hnCwG-4ddsfyKd3uA/viewform"
+  icon: link
